# ghx

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TODO.md  justfile
src/: app.rs  gh.rs  main.rs  theme.rs
src/ui/: lists_view.rs  mod.rs  notif_list.rs  repo_detail.rs  repo_list.rs  search.rs
themes/: classic.toml  fire.toml  matrix.toml  monochrome.toml
