[package]
name = "ghx"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.30"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nucleo-matcher = "0.3"
anyhow = "1"
mdr = { git = "https://github.com/jrf/mdr" }

[profile.release]
strip = true
lto = true
